tests/compile_fail/runtime_view_owner_context_escape.cpp
#include "cosmosim/workflows/runtime_resources.hpp"

void escape(cosmosim::workflows::AnalysisStageView& view) {
  (void)view.ownerContext();
}
